--- a/awais.html
+++ b/awais.html
@@ -605,7 +605,7 @@
                 </div>
                 <div class="window-content">
                     <div class="avatar-container">
-                        <img src="https://media.licdn.com/dms/image/v2/D5603AQEONdV_HQNbCA/profile-displayphoto-shrink_800_800/B56ZWL4RBKGoAc-/0/1741808539036?e=1752105600&v=beta&t=ljPYHEYkm3vKPc20sTTjYkhtBMN7QhNnQ_I_wkqv2B0" alt="Muhammad Awais Laal" class="avatar">
+                        <img src="https://pngtree.com/freepng/avatar-of-a-blonde-man_13379585.html" alt="Muhammad Awais Laal" class="avatar">
                         <div class="status-dot"></div>
                     </div>
                     <h1>Muhammad Awais Laal</h1>
